# Why-Partial-Residuals-fails

./: README.MD
Notebooks/10M/: 10M_MIXTURE_EXPERIMENT.ipynb  10_M_Residual_GPT.ipynb  AttnOnly_seed_stability.ipynb
Notebooks/124M/: 124M_AttnOnly_Std_Seed_123.ipynb  124M_AttnOnly_std_seed42.ipynb  Residual_124M__GPT.ipynb
Paper/: why_partial_residuals_fail_FINAL_v7.docx
Results/: 10M_ResidualGPT_results.csv  10M_ResidualGPT_summary.csv  10M_nanoGPT_results.csv  124M_ResidualGPT_results.csv  124M_nanoGPT_results.csv  cross_scale_summary.csv
residualscope/: README.md  pyproject.toml
residualscope/examples/: attnonly_ffnonly_demo.py
residualscope/residualscope/: __init__.py  compare.py  core.py  plots.py
residualscope/tests/: test_core.py
