[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "residualscope"
version = "0.1.0"
description = "Model-agnostic diagnostics for transformer residual pathway analysis: gradient norm tracking, hidden-state drift, dead-neuron detection."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Pratik Patel" }
]
keywords = ["pytorch", "transformers", "interpretability", "deep-learning", "diagnostics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=1.13",
    "matplotlib>=3.5",
    "numpy>=1.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/pratik376/residualscope"
Repository = "https://github.com/pratik376/residualscope"
"Related paper" = "https://github.com/pratik376/why-partial-residuals-fail"

[tool.setuptools.packages.find]
include = ["residualscope*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
